--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@unform/web": "^2.0.0",
     "axios": "^0.19.2",
     "date-fns": "^2.0.0-beta.5",
+    "date-fns-tz": "^1.0.10",
     "history": "^4.10.1",
     "immer": "^6.0.0",
     "polished": "^3.4.4",
